<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/title"
            android:text="@string/title"
            android:layout_alignParentStart="true"
            android:paddingStart="@dimen/padding_start_10"
            android:paddingTop="@dimen/heading_padding_top"
            android:textStyle="bold"
            android:textSize="@dimen/heading_text"
            android:elevation="@dimen/elevation_std"
            android:textColor="@color/generic_text_color"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/name"
            android:layout_below="@id/title"
            android:elevation="@dimen/elevation_std"
            android:textSize="@dimen/detail_text"
            android:paddingStart="@dimen/padding_start_10"
            android:textColor="@color/generic_text_color"/>
    </android.support.v7.widget.CardView>



   <android.support.v7.widget.CardView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:id="@+id/price"
           android:text="@string/product_price"
           android:paddingStart="@dimen/padding_start_10"
           android:paddingTop="@dimen/heading_padding_top"
           android:textStyle="bold"
           android:textSize="@dimen/heading_text"
           android:elevation="@dimen/elevation_std"
           android:textColor="@color/generic_text_color"/>

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:id="@+id/onsaledate"
           android:layout_below="@id/price"
           android:elevation="@dimen/elevation_std"
           android:textSize="@dimen/detail_text"
           android:paddingStart="@dimen/padding_start_10"
           android:paddingBottom="@dimen/padding_bottom_5"
           android:textColor="@color/generic_text_color"/>
   </android.support.v7.widget.CardView>


   <android.support.v7.widget.CardView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:id="@+id/description_product"
           android:text="@string/description"
           android:paddingStart="@dimen/padding_start_10"
           android:paddingTop="@dimen/heading_padding_top"
           android:textStyle="bold"
           android:textSize="@dimen/heading_text"
           android:elevation="@dimen/elevation_std"
           android:textColor="@color/generic_text_color"/>

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:id="@+id/diamondCode"
           android:layout_below="@id/description_product"
           android:elevation="@dimen/elevation_std"
           android:textSize="@dimen/detail_text"
           android:paddingBottom="@dimen/padding_bottom_5"
           android:paddingStart="@dimen/padding_start_10"
           android:textColor="@color/generic_text_color"/>
   </android.support.v7.widget.CardView>
</LinearLayout>
