<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/listFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                </LinearLayout>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/name_prod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:elevation="@dimen/elevation_std"
                        android:paddingStart="@dimen/padding_start_10"
                        android:paddingTop="@dimen/heading_padding_top"
                        android:text="@string/title"
                        android:textColor="@color/generic_text_color"
                        android:textSize="@dimen/heading_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_prod"
                        android:elevation="@dimen/elevation_std"
                        android:paddingStart="@dimen/padding_start_10"
                        android:textColor="@color/generic_text_color"
                        android:textSize="@dimen/detail_text" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/card_view_padding">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:elevation="@dimen/elevation_std"
                        android:paddingStart="@dimen/padding_start_10"
                        android:paddingTop="@dimen/heading_padding_top"
                        android:text="@string/price_lbl"
                        android:textColor="@color/generic_text_color"
                        android:textSize="@dimen/heading_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title1"
                        android:elevation="@dimen/elevation_std"
                        android:paddingStart="@dimen/padding_start_10"
                        android:textColor="@color/generic_text_color"
                        android:textSize="@dimen/detail_text" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/card_view_padding">

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:elevation="@dimen/elevation_std"
                        android:paddingStart="@dimen/padding_start_10"
                        android:paddingTop="@dimen/heading_padding_top"
                        android:text="@string/description_lbl"
                        android:textColor="@color/generic_text_color"
                        android:textSize="@dimen/heading_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prod_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/description"
                        android:elevation="@dimen/elevation_std"
                        android:paddingStart="@dimen/padding_start_10"
                        android:textColor="@color/generic_text_color"
                        android:textSize="@dimen/detail_text" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

          <!--  <Button
                android:id="@+id/add_to_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/add_to_cart"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/gotocart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="#ffffff"-->
                android:paddingTop="7dp"
                android:text="GOTO CART AND CHECKOOUT"/>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <com.github.clans.fab.FloatingActionMenu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/detail_fab_margin"
        android:layout_marginRight="@dimen/detail_fab_margin"
        android:layout_marginEnd="@dimen/detail_fab_margin"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorPrimary"
        app:menu_icon="@drawable/fab_add">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_to_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drawer_to_read"
            app:fab_size="mini"
            app:fab_label="add to cart"
            app:fab_colorNormal="@color/fab_yellow"
            app:fab_colorPressed="@color/fab_yellow_dark" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drawer_reading"
            app:fab_size="mini"
            app:fab_label="Goto Cart"
            app:fab_colorNormal="@color/fab_blue"
            app:fab_colorPressed="@color/fab_blue_dark" />

        <!--<com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drawer_finished"
            app:fab_size="mini"
            app:fab_label="madan"
            app:fab_colorNormal="@color/fab_purple"
            app:fab_colorPressed="@color/fab_purple_dark" />
-->
    </com.github.clans.fab.FloatingActionMenu>
    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />-->

</android.support.design.widget.CoordinatorLayout>
